--- a/css/main.css
+++ b/css/main.css
@@ -5125,7 +5125,7 @@ body {
 
 a {
 	text-decoration: none;
-	color: #e25440
+	color: #5ba4e5
 }
 
 a:hover {
@@ -6358,7 +6358,7 @@ pre.highlight code,
 }
 
 .footer__copyright {
-	margin: 0 20px 10px
+	margin: 0px 20px 10px
 }
 
 .user-image {
@@ -6386,7 +6386,7 @@ table tr:nth-child(even) td {
 }
 
 .content-wrapper {
-	max-width: 1100px
+	max-width: 1200px
 }
 
 a.abstract {
@@ -6418,13 +6418,13 @@ div.abstract>.right-col {
 		align-items: center;
 		column-count: 2;
 		display: flex;
-		padding-bottom: 20px
+		padding-bottom: 40px
 	}
 }
 
 .two-col-row {
 	align-items: center;
-	padding-bottom: 20px
+	padding-bottom: 40px
 }
 
 h2.post-title {
